[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/weight.png" type="Texture" id=1]
[ext_resource path="res://assets/icons/fiber.png" type="Texture" id=2]
[ext_resource path="res://entities/stackable_store_item/stackable_store_item.gd" type="Script" id=3]
[ext_resource path="res://assets/gold.png" type="Texture" id=4]

[node name="StackableStoreItem" type="HBoxContainer"]
margin_right = 168.0
margin_bottom = 32.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon" type="TextureRect" parent="."]
margin_right = 32.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
texture = ExtResource( 2 )
expand = true

[node name="QuantityLabel" type="Label" parent="."]
margin_left = 36.0
margin_top = 9.0
margin_right = 96.0
margin_bottom = 23.0
rect_min_size = Vector2( 60, 0 )
text = "x 45"

[node name="BuyButton" type="TextureButton" parent="."]
margin_left = 100.0
margin_right = 132.0
margin_bottom = 32.0
texture_normal = ExtResource( 1 )

[node name="Label" type="Label" parent="BuyButton"]
margin_right = 23.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "buy"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StoreButton" type="TextureButton" parent="."]
margin_left = 136.0
margin_right = 168.0
margin_bottom = 32.0
texture_normal = ExtResource( 1 )

[node name="Label2" type="Label" parent="StoreButton"]
margin_left = 0.021759
margin_top = 0.529739
margin_right = 33.0218
margin_bottom = 14.5297
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "store"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WithdrawButton" type="TextureButton" parent="."]
margin_left = 172.0
margin_right = 204.0
margin_bottom = 32.0
texture_normal = ExtResource( 1 )

[node name="Label3" type="Label" parent="WithdrawButton"]
margin_left = -2.07544
margin_top = 0.529739
margin_right = 20.9246
margin_bottom = 14.5297
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "withd"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PriceDisplay" type="MarginContainer" parent="."]
margin_left = 208.0
margin_right = 284.0
margin_bottom = 32.0
custom_constants/margin_left = 8

[node name="HBoxContainer" type="HBoxContainer" parent="PriceDisplay"]
margin_left = 8.0
margin_right = 76.0
margin_bottom = 32.0

[node name="PriceLabel" type="Label" parent="PriceDisplay/HBoxContainer"]
margin_top = 9.0
margin_right = 32.0
margin_bottom = 23.0
text = "Price"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="PriceDisplay/HBoxContainer"]
margin_left = 36.0
margin_right = 68.0
margin_bottom = 32.0
mouse_filter = 2
texture = ExtResource( 4 )

[connection signal="pressed" from="BuyButton" to="." method="_on_buy_button_pressed"]
[connection signal="pressed" from="StoreButton" to="." method="_on_store_button_pressed"]
[connection signal="pressed" from="WithdrawButton" to="." method="_on_withdraw_button_pressed"]
